UI (Filter by Genre noch fixen)